# exedet

./: README.md  pyproject.toml
exedet/: __main__.py  detect_8088.py
tests/: test_exe.py
tests/data/: trigger.com
